--- a/src/scss/_spinner.scss
+++ b/src/scss/_spinner.scss
@@ -5,7 +5,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: $gray168half;
+    background-color: $bgcGray;
 
     .wait-loading {
         color: $brandColor;
