reload list accordint to storage page number

--- a/src/scss/_general.scss
+++ b/src/scss/_general.scss
@@ -40,6 +40,11 @@ code {
     }
 }
 
+.Details-section__center {
+    width: 40%;
+    margin: 0 auto;
+}
+
 .Details-ul__noliststyle {
     list-style-type: none;
 }
